# isopy

./: README.md  index.json  pyproject.toml
.github/workflows/: build-index.yml
isopy/: __init__.py  cli.py  plugin.py
scripts/: build-index.py
