[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isopy"
version = "0.1.0"
description = "Install isolated CPython builds and integrate them with Poetry"
authors = [{ name = "rexologue", email = "mironovigoroffical@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = ["poetry>=1.2"]  
requires-python = ">=3.8"

[project.scripts]
isopy = "isopy.cli:main"

[project.entry-points."poetry.application.plugin"]
isopy = "isopy.plugin:IsopyPlugin"
